crates/htui/tests/snapshots/shell__offline_label.snap
---
source: crates/htui/tests/shell.rs
expression: frame
---
Graphics · DESKTOP-HTUI · offline · 3m · 0 runs
 1 Backlog  2 Skills  3 Requirements  4 Settings  5 Chat
┌ Backlog (2) ────────────────────────────────────────┐┌ FEAT-1 ───────────────────────────────────┐
│▾ Vulkan Tutorials (2)                               ││ Body Runs Graph Docs Notes Prompt Reqs    │
│  FEAT-1  in_progress  Chapter 12 parity             ││Chapter 12 parity                          │
│  TOOL-1  open         Shader build script           ││FEAT-1  FEAT  in_progress                  │
│                                                     ││gpu, vulkan · priority 0 · version 1       │
│                                                     ││                                           │
│                                                     ││No body for this item.                     │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
└─────────────────────────────────────────────────────┘└───────────────────────────────────────────┘
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help · w workspaces · Ctrl+f find
