crates/htui/tests/snapshots/shell__switcher_empty.snap
---
source: crates/htui/tests/shell.rs
expression: frame
---
no workspace · no box · memory · 0 working · 0 waiting
 1 Backlog  2 Skills  3 Requirements  4 Settings  5 Chat
┌ Backlog (0) ────────────────────────────────────────┐┌ Detail ───────────────────────────────────┐
│No items in this workspace.                          ││ Body Runs Graph Docs Notes Prompt Reqs    │
│                                                     ││No item selected.                          │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                   ┌ Workspaces ──────────────────────────────────────────────┐                   │
│                   │  no workspaces — `N` in Settings > Hierarchy creates one │                   │
│                   │                                                          │                   │
│                   │  j/k move · Enter switch · Esc close                     │                   │
│                   └──────────────────────────────────────────────────────────┘                   │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
└─────────────────────────────────────────────────────┘└───────────────────────────────────────────┘
Ctrl+c quit · ? help
