crates/htui/tests/snapshots/shell__switcher_open.snap
---
source: crates/htui/tests/shell.rs
expression: frame
---
Graphics · DESKTOP-HTUI · memory · 0 working · 0 waiting
 1 Backlog  2 Skills  3 Requirements  4 Settings  5 Chat
┌ Backlog (2) ────────────────────────────────────────┐┌ FEAT-1 ───────────────────────────────────┐
│▾ Vulkan Tutorials (2)                               ││ Body Runs Graph Docs Notes Prompt Reqs    │
│  FEAT-1  in_progress  Chapter 12 parity             ││Chapter 12 parity                          │
│  TOOL-1  open         Shader build script           ││FEAT-1  FEAT  in_progress                  │
│                                                     ││gpu, vulkan · priority 0 · version 1       │
│                                                     ││                                           │
│                                                     ││No body for this item.                     │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                             ┌ Workspaces ──────────────────────────┐                             │
│                             │> Graphics  1 project                 │                             │
│                             │  Platform  2 projects                │                             │
│                             │                                      │                             │
│                             │  j/k move · Enter switch · Esc close │                             │
│                             └──────────────────────────────────────┘                             │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
└─────────────────────────────────────────────────────┘└───────────────────────────────────────────┘
Ctrl+c quit · ? help
